--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,7 @@
         "audit": "^0.0.6",
         "body-parser": "^1.19.0",
         "cors": "^2.8.5",
+        "dotenv": "^16.4.5",
         "express": "^4.17.1",
         "express-session": "^1.18.0",
         "fix": "^0.0.6",
